correct warnings